--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Targeted Attack Framework for Continual Learning</title>
+    <title></title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -42,9 +42,9 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer">
-            <p>&copy; 2025 xxx: xxxxxxxx. All rights reserved.</p>
-        </footer>
+        <!-- <footer class="footer">
+            <p>&copy; 2025 <em>Improving Sustainability of Adversarial Examples in Class-Incremental Learning.</em> All rights reserved.</p>
+        </footer> -->
     </div>
 
     <!-- Modal for Image Viewing -->
@@ -60,6 +60,6 @@
     </div>
 
     <script src="assets/js/main.js"></script>
-    <script>window.embeddedConfig = {"project": {"title": "xxx: This is title", "authors": ["This is subtitle"], "paper_url": "#", "code_url": "#"}, "benchmarks": [{"id": "cifar100_targeted", "name": "Targeted Transferability Attack", "dataset": "CIFAR-100", "type": "targeted", "cil_methods": [{"name": "Replay", "results_path": "cifar100/replay", "stat": [{"name": "SOTA", "value": 0.312}, {"name": "OUR", "value": 0.376}]}, {"name": "MEMO", "results_path": "cifar100/memo", "stat": [{"name": "SOTA", "value": "0.380"}, {"name": "OUR", "value": 0.527}]}, {"name": "DER", "results_path": "cifar100/der", "stat": [{"name": "SOTA", "value": 0.402}, {"name": "OUR", "value": 0.631}]}, {"name": "Foster", "results_path": "cifar100/foster", "stat": [{"name": "SOTA", "value": 0.485}, {"name": "OUR", "value": 0.495}]}, {"name": "WA", "results_path": "cifar100/wa", "stat": [{"name": "SOTA", "value": 0.562}, {"name": "OUR", "value": 0.635}]}, {"name": "BiC", "results_path": "cifar100/bic", "stat": [{"name": "SOTA", "value": 0.402}, {"name": "OUR", "value": 0.531}]}, {"name": "iCaRL", "results_path": "cifar100/icarl", "stat": [{"name": "SOTA", "value": 0.324}, {"name": "OUR", "value": 0.365}]}, {"name": "PodNet", "results_path": "cifar100/podnet", "stat": [{"name": "SOTA", "value": 0.422}, {"name": "OUR", "value": 0.853}]}, {"name": "Finetune", "results_path": "cifar100/finetune", "stat": [{"name": "SOTA", "value": 0.099}, {"name": "OUR", "value": 0.094}]}]}, {"id": "imagenet100_targeted", "name": "Targeted Transferability Attack", "dataset": "ImageNet-100", "type": "targeted", "cil_methods": [{"name": "iCaRL", "results_path": "imagenet100/icarl", "stat": [{"name": "SOTA", "value": 0.111}, {"name": "OUR", "value": 0.271}]}, {"name": "Foster", "results_path": "imagenet100/foster", "stat": [{"name": "SOTA", "value": 0.225}, {"name": "OUR", "value": 0.225}]}]}], "target_classes": 10, "class_names": ["Class 0", "Class 1", "Class 2", "Class 3", "Class 4", "Class 5", "Class 6", "Class 7", "Class 8", "Class 9"]};</script>
+    <script>window.embeddedConfig = {"project": {"title": "Improving Sustainability of Adversarial Examples in Class-Incremental Learning", "authors": [""], "paper_url": "#", "code_url": "#"}, "benchmarks": [{"id": "cifar100_targeted", "name": "Targeted Transferability Attack", "dataset": "CIFAR-100", "type": "targeted", "cil_methods": [{"name": "PodNet", "results_path": "cifar100/podnet", "stat": [{"name": "SOTA", "value": 0.422}, {"name": "OUR", "value": 0.853}]}, {"name": "WA", "results_path": "cifar100/wa", "stat": [{"name": "SOTA", "value": 0.562}, {"name": "OUR", "value": 0.635}]}, {"name": "DER", "results_path": "cifar100/der", "stat": [{"name": "SOTA", "value": 0.402}, {"name": "OUR", "value": 0.631}]}, {"name": "BiC", "results_path": "cifar100/bic", "stat": [{"name": "SOTA", "value": 0.402}, {"name": "OUR", "value": 0.531}]}, {"name": "MEMO", "results_path": "cifar100/memo", "stat": [{"name": "SOTA", "value": "0.380"}, {"name": "OUR", "value": 0.527}]}, {"name": "Foster", "results_path": "cifar100/foster", "stat": [{"name": "SOTA", "value": 0.485}, {"name": "OUR", "value": 0.495}]}, {"name": "Replay", "results_path": "cifar100/replay", "stat": [{"name": "SOTA", "value": 0.312}, {"name": "OUR", "value": 0.376}]}, {"name": "iCaRL", "results_path": "cifar100/icarl", "stat": [{"name": "SOTA", "value": 0.324}, {"name": "OUR", "value": 0.365}]}, {"name": "Finetune", "results_path": "cifar100/finetune", "stat": [{"name": "SOTA", "value": 0.099}, {"name": "OUR", "value": 0.094}]}]}, {"id": "imagenet100_targeted", "name": "Targeted Transferability Attack", "dataset": "ImageNet-100", "type": "targeted", "cil_methods": [{"name": "PodNet", "results_path": "imagenet100/podnet", "stat": [{"name": "SOTA", "value": "0.680"}, {"name": "OUR", "value": 0.839}]}, {"name": "MEMO", "results_path": "imagenet100/memo", "stat": [{"name": "SOTA", "value": 0.161}, {"name": "OUR", "value": 0.329}]}, {"name": "DER", "results_path": "imagenet100/der", "stat": [{"name": "SOTA", "value": 0.262}, {"name": "OUR", "value": 0.326}]}, {"name": "iCaRL", "results_path": "imagenet100/icarl", "stat": [{"name": "SOTA", "value": 0.111}, {"name": "OUR", "value": 0.271}]}, {"name": "BiC", "results_path": "imagenet100/bic", "stat": [{"name": "SOTA", "value": 0.095}, {"name": "OUR", "value": 0.247}]}, {"name": "WA", "results_path": "imagenet100/wa", "stat": [{"name": "SOTA", "value": 0.151}, {"name": "OUR", "value": 0.241}]}, {"name": "Foster", "results_path": "imagenet100/foster", "stat": [{"name": "SOTA", "value": 0.225}, {"name": "OUR", "value": 0.225}]}, {"name": "Replay", "results_path": "imagenet100/replay", "stat": [{"name": "SOTA", "value": 0.094}, {"name": "OUR", "value": 0.189}]}, {"name": "Finetune", "results_path": "imagenet100/finetune", "stat": [{"name": "SOTA", "value": 0.098}, {"name": "OUR", "value": "0.060"}]}]}], "target_classes": 10, "class_names": ["Class 0", "Class 1", "Class 2", "Class 3", "Class 4", "Class 5", "Class 6", "Class 7", "Class 8", "Class 9"]};</script>
 </body>
 </html>
